[package]
name = "stm32f4"
version = "0.1.0"
edition = "2021"

[dependencies]
l298_hbridge = { path = "../../" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.23.0"
features = ["stm32f411", ]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"
